# Kobold-Delvers

./: README.md
SandForge-Engine/: CMakeLists.txt  instrucciones.txt
SandForge-Engine/assets/audios/music/: in_game.ceol  main_menu.ceol  sandbox.ceol  sandbox_v2.ceol
SandForge-Engine/assets/shaders/: fade_overlay.fs.glsl  sprite.vs.glsl
SandForge-Engine/assets/sprites/: KoboldInteractions.psd  KoboldMiner.psd  Structures.psd  Tutorials.psd  cursor.psd  materialAtlas.psd
SandForge-Engine/levels/: custom_001.lvl  custom_002.lvl  custom_003.lvl
SandForge-Engine/levels/custom/: custom_001.lvl  custom_002.lvl  custom_003.lvl  custom_004.lvl  quick.lvl
SandForge-Engine/levels/vanilla/: _level_11.lvl  level_001.lvl  level_003.lvl  level_01.lvl  level_02.lvl  level_03.lvl  level_04.lvl  level_04_special.lvl  level_05.lvl  level_06.lvl  level_07.lvl  level_08.lvl  level_08_special.lvl  level_09.lvl  level_10.lvl  level_11.lvl  level_12_special.lvl  make_your_level_level_11.lvl  no c no c.lvl  special_1.lvl
SandForge-Engine/src/: main.cpp
SandForge-Engine/src/app/: app.cpp  app.h  game_progress.cpp  game_progress.h  log.h  module.h  screenshot.cpp  screenshot.h  settings.cpp  settings.h  timer.cpp  timer.h
SandForge-Engine/src/audio/: audio.cpp  audio.h
SandForge-Engine/src/core/: engine.cpp  engine.h  input.cpp  input.h  level.cpp  level.h  level_io.cpp  level_io.h  material.cpp  material.h  npc_system.cpp  npc_system.h  paint_tool.cpp  paint_tool.h  particles.cpp  particles.h  player_system.cpp  player_system.h  utils.cpp  worldsim.cpp  worldsim.h
SandForge-Engine/src/game/: scene.h  scene_compendium.cpp  scene_compendium.h  scene_levelselector.cpp  scene_levelselector.h  scene_manager.cpp  scene_manager.h  scene_settings.cpp  scene_settings.h  scenes.cpp  scenes.h
SandForge-Engine/src/render/: anim.h  atlas.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  texture.cpp  texture.h
SandForge-Engine/src/ui/: font.cpp  font.h  ui.cpp  ui.h  ui_anim.cpp  ui_anim.h
(+2 files in other folders)
